--- a/src/app/components/custom-table/custom-table.component.html
+++ b/src/app/components/custom-table/custom-table.component.html
@@ -67,3 +67,36 @@
   </tbody>
 
 </table>
+
+<div class="d-flex justify-content-between">
+
+  <div>
+    <span class="fw-light">Mostrando {{ table.getRowModel().rows.length }} de {{ table.getRowCount() }} registros.</span>
+  </div>
+
+
+  <div class="d-flex gap-2 align-items-center">
+
+    <div class="min-w-8">
+      <span class="fw-light">{{ table.getState().pagination.pageIndex + 1 }} de {{ table.getPageCount() }} Páginas</span>
+    </div>
+
+    <select class="form-select" (change)="onChangeValueSelect($event)" >
+
+      @for (size of sizesPages(); track size) {
+
+        <option [value]="size"
+          [selected]="size === table.getState().pagination.pageSize"
+        >{{size}}</option>
+
+      }
+
+    </select>
+
+    <button class="btn btn-info" [disabled]="!table.getCanPreviousPage()" (click)="table.previousPage()">Anterior</button>
+    <button class="btn btn-info" [disabled]="!table.getCanNextPage()" (click)="table.nextPage()">Siguiente</button>
+  </div>
+
+
+</div>
+
