--- a/src/app/components/custom-table/custom-table.component.html
+++ b/src/app/components/custom-table/custom-table.component.html
@@ -1,5 +1,12 @@
 
-<div class="d-flex justify-content-end">
+<div class="d-flex justify-content-between">
+
+  <div>
+    <input-debouncer
+      placeholder="Buscar..."
+      (onDebouce)="onSearch($event)"
+    />
+  </div>
 
 
   <div class="dropdown mb-1">
