--- a/src/app/components/custom-table/custom-table.component.html
+++ b/src/app/components/custom-table/custom-table.component.html
@@ -148,6 +148,10 @@
 
         </tr>
 
+    }@empty {
+      <tr >
+        <td colspan="8" class="text-center">No hay datos para mostrar.</td>
+      </tr>
     }
 
   </tbody>
